Agregado de página de sermones

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="reunion-varones.html">Reunión de varones</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="reuniones.html">Reuniones</a>
-                    </li>
                     -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="sermones.html">Sermones</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="biblia-un-anio.html">La Biblia en un Año</a>
                     </li>
