Actualización de página sermones

--- a/sermones.html
+++ b/sermones.html
@@ -28,25 +28,37 @@
         </nav>
         <!-- Sermón del 07/01/2023 -->
         <div class="sermones">
-            <p>07/01/2023 - La meditación</p>
+            <p>
+                07/01/2023<br>
+                La meditación
+            </p>
         </div>
         <!-- Sermón del 14/01/2023 -->
         <div class="sermones">
-            <p>14/01/2023 - <a href="https://www.ccll.com.ar/sermones/230114-Conversion.html" target="_blank">La conversión a Dios</a></p>
+            <p>
+                14/01/2023<br>
+                <a href="https://www.ccll.com.ar/sermones/230114-Conversion.html" target="_blank">La conversión a Dios</a>
+            </p>
         </div>
         <!-- Sermón del 21/01/2023 -->
         <!-- Predicación a cargo de Fabrizio -->
         <div class="sermones">
-            <p>21/01/2023 - El nuevo nacimiento</p>
+            <p>
+                21/01/2023<br>
+                El nuevo nacimiento
+            </p>
         </div>
         <!-- Sermón del 28/01/2023 -->
         <div class="sermones">
-            <p>28/01/2023 - <a href="https://www.ccll.com.ar/sermones/230128-Arrepentimiento.html" target="_blank">El arrepentimiento</a></p>
+            <p>
+                28/01/2023<br>
+                <a href="https://www.ccll.com.ar/sermones/230128-Arrepentimiento.html" target="_blank">El arrepentimiento</a>
+            </p>
         </div>
         <!-- Sermón del 29/01/2023 predicado en Oliva -->
         <div class="sermones">
             <p>
-                29/01/2023 - 
+                29/01/2023<br> 
                 <a href="https://www.ccll.com.ar/sermones/230129-Evidencia-de-amor.html" target="_blank">
                     La evidencia de nuestro amor a Dios manifestada mediante la obediencia a los mandamientos divinos
                 </a>
@@ -54,7 +66,28 @@
         </div>
         <!-- Sermón del 05/02/2023 -->
         <div class="sermones">
-            <p>05/02/2023 - <a href="https://www.ccll.com.ar/sermones/230204-Vida-que-agrada-a-Dios.html" target="_blank">La vida que agrada a Dios</a></p>
+            <p>
+                05/02/2023<br>
+                <a href="https://www.ccll.com.ar/sermones/230204-Vida-que-agrada-a-Dios.html" target="_blank">La vida que agrada a Dios</a>
+            </p>
+        </div>
+        <!-- Sermón del 11/02/2023 -->
+        <div class="sermones">
+            <p>
+                11/02/2023<br> 
+                <a href="https://www.ccll.com.ar/sermones/230211-Viejo-hombre-nuevo-hombre.html" target="_blank">
+                    La mudanza de la debilidad del viejo hombre a la fortaleza del nuevo
+                </a>
+            </p>
+        </div>
+        <!-- Sermón del 18/02/2023 -->
+        <div class="sermones">
+            <p>
+                18/02/2023<br> 
+                <a href="https://www.ccll.com.ar/sermones/230218-Oposicion-nuevo-hombre.html" target="_blank">
+                    La oposición del nuevo hombre contra los vicios del viejo hombre
+                </a>
+            </p>
         </div>
         <footer class="pie-de-pagina">
             <p>Comunidad Cristiana Laguna Larga &copy;</p>
