Actualización completa de la página web

--- a/sermones.html
+++ b/sermones.html
@@ -4,28 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>Comunidad Cristiana Laguna Larga</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="imagenes/favicon.ico">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     </head>
     <body>
-        <!-- Menú -->
-        <nav class="navbar fondo-menu navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="index.html">Comunidad Cristiana Laguna Larga</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <header>
+            <h2>Comunidad Cristiana Laguna Larga</h2>
+        </header>
         <!-- Sermón del 07/01/2023 -->
         <div class="sermones">
             <p>
@@ -89,8 +74,26 @@
                 </a>
             </p>
         </div>
+        <!-- Sermón del 04/03/2023 -->
+        <div class="sermones">
+            <p>
+                04/03/2023<br> 
+                <a href="https://www.ccll.com.ar/sermones/230304-Comprension-voluntad-de-Dios.html" target="_blank">
+                    La comprensión de la voluntad de Dios
+                </a>
+            </p>
+        </div>
+        <!-- Sermón del 18/03/2023 -->
+        <div class="sermones">
+            <p>
+                18/03/2023<br> 
+                <a href="https://www.ccll.com.ar/sermones/230318-Sobre-la-piedad.html" target="_blank">
+                    Sobre la piedad
+                </a>
+            </p>
+        </div>
         <footer class="pie-de-pagina">
-            <p>Comunidad Cristiana Laguna Larga &copy;</p>
+            <p>Comunidad Cristiana Laguna Larga</p>
         </footer>
     </body>
 </html>
