--- a/reunion-varones.html
+++ b/reunion-varones.html
@@ -1,148 +1,36 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>Comunidad Cristiana Laguna Larga</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="imagenes/favicon.ico">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-</head>
-  <body>
-    <!-- Menú -->
-    <nav class="navbar fondo-menu navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="index.html">Comunidad Cristiana Laguna Larga</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="index.html">Inicio</a>
-              </li>
-              <!--
-              <li class="nav-item">
-                  <a class="nav-link" href="estudios.html">Estudios bíblicos</a>
-              </li>
-              -->
-              <li class="nav-item">
-                  <a class="nav-link" href="biblia-un-anio.html">La Biblia en un Año</a>
-              </li>
-              <!--
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Adolescentes</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Escuela Bíblica</a>
-              </li>
-              -->
-          </ul>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>Comunidad Cristiana Laguna Larga</title>
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="imagenes/favicon.ico">
+    </head>
+    <body>
+        <header>
+            <h2>Comunidad Cristiana Laguna Larga</h2>
+        </header>
+        <!-- Reunión del 26/03/2023 -->
+        <div class="varones">
+            <p>Reunón del 26/03/2023</p>
+            <iframe src="https://www.youtube.com/embed/x71je7W8_Vs"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe>
+        </div>
+        <!-- Reunión del 23/04/2023 -->
+        <div class="varones">
+          <p>Reunón del 23/04/2023</p>
+          <iframe src="https://www.youtube.com/embed/2_KrgdWdVcg"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allowfullscreen>
+          </iframe>
       </div>
-    </nav>
-    <p class="somos">VIDAS FIRMES es un programa desarrollado por la Iglesia del Pueblo de Chicago. Se trata de un estudio bíblico para varones. 
-      En Comunidad Cristiana Laguna Larga, durante el año 2022, seguiremos este estudio bíblico.<br>
-      A continuación se encuentran los videos del estudio con las fechas en la que los mismos tendrán o han tenido lugar.
-    </p>
-    <div class="row contenedor-biblia-un-anio">
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">27/02/2022</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/eIzSvHNsOUg"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">27/03/2022</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/d7K52_B1Qrk"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        <!--
-        <p>Video basado en el sermón <a href="https://app.rightnowmedia.org/es/content/details/303108?session=303112" target="_blank">Orar para recibir una respuesta</a> de la serie Parábolas de Rey Azofeifa. RightNow Media.</p>
-        -->
-      </div>
-
-      <!--
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">06/03/2021</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/QZaFNnXG2u0"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">27/02/2021</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/DHOEuQzHyVQ?start=1386"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">20/02/2021</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/ds3UL4vTOJM"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">13/02/2021</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/xPbXA_RXreA"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">06/02/2021</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/V2ibyNlrpr4"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-
-      <div class="col-lg-4 col-md-6 cont-vid-bib-un-anio">
-        <p class="dia-biblia-un-anio">30/01/2021</p>
-        <iframe class="video-biblia-un-anio"
-                src="https://www.youtube.com/embed/zArpalOHW3w"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-      </div>
-      -->
-
-    </div>
-    <!--
-      Reunión 23/01/2021
-      <div class="elemento-de-tabla1"><p>23/01/2021</p></div>
-      <div class="elemento-de-tabla1"><iframe width="560" height="315" src="https://www.youtube.com/embed/J3zGIQRFjhQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-      <div class="elemento-de-tabla1"><iframe width="238" height="48" frameborder="0" allowfullscreen="" scrolling="no" src="https://ar.ivoox.com/es/player_ek_64050164_2_1.html?data=l5mdl5WVepWhhpywj5mYaZS1lpaah5yncZKhhpywj5WRaZi3jpWah5ynca3VjMjcz9XWqc_nyoqwlYqmd8-f0trSjdnNqc_ZjMrZjdPZqdfjjM3cz8fWqYzYxpDZw5Das83pz9nOj4qbh4671s7ZzsrWsdCfopOYtNTGrcjgytSah5yncZU.&"></iframe></div>
-      Reunión 16/01/2021
-      <div class="elemento-de-tabla2"><p>16/01/2021</p></div>
-      <div class="elemento-de-tabla2"><iframe width="560" height="315" src="https://www.youtube.com/embed/9_uOeOZkjoc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-      <div class="elemento-de-tabla2"><iframe width="238" height="48" frameborder="0" allowfullscreen="" scrolling="no" src="https://ar.ivoox.com/es/player_ek_64050164_2_1.html?data=l5mdl5WVepWhhpywj5mYaZS1lpaah5yncZKhhpywj5WRaZi3jpWah5ynca3VjMjcz9XWqc_nyoqwlYqmd8-f0trSjdnNqc_ZjMrZjdPZqdfjjM3cz8fWqYzYxpDZw5Das83pz9nOj4qbh4671s7ZzsrWsdCfopOYtNTGrcjgytSah5yncZU.&"></iframe></div>
-      Reunión 09/01/2021
-      <div class="elemento-de-tabla1"><p>09/01/2021</p></div>
-      <div class="elemento-de-tabla1"><a href="https://photos.app.goo.gl/bofhfZrsbWhVi3VD7" target="_blank">Video de la reunión general del 09/01/2021</a></div>
-      <div class="elemento-de-tabla1"><a href="https://www.dropbox.com/s/zdn2tnjto4ufoz3/210109-Acerca-de-Jesucristo.mp3?dl=0" target="_blank">Audio de la reunión general del 09/01/2021</a></div>
-    </div>
-    -->
-    <footer class="pie-de-pagina">
-        <p>Comunidad Cristiana Laguna Larga &copy;</p>
-    </footer>
-  </body>
+        <footer class="pie-de-pagina">
+            <p>Comunidad Cristiana Laguna Larga</p>
+        </footer>
+    </body>
 </html>
