Actualización cuarta reunión de varones.

--- a/reunion-varones.html
+++ b/reunion-varones.html
@@ -11,24 +11,97 @@
         <header>
             <h2>Comunidad Cristiana Laguna Larga</h2>
         </header>
+        <!-- Presentación -->
+        <div class="varones">
+            <p>
+                Durante este año, en el desayuno ☕🍪 que los varones de la congregación y todos aquellos que se quieran sumar tendremos cada último 
+                domingo del mes a las 9:00 am, veremos un video de la serie <a href="https://youtube.com/playlist?list=PLMvvgc4F6CvVhnWALx9CqVvMJx6nUWW80" target="_blank">
+                Orando con los héroes de la fe</a>.<br>
+                Esta es una serie de 14 videos de Ministerios Integridad & Sabiduría en las que el Pastor Miguel Nuñez nos enseñará sobre la importantísima
+                práctica piadosa de la oración.
+            </p>
+        </div>
         <!-- Reunión del 26/03/2023 -->
         <div class="varones">
             <p>Reunón del 26/03/2023</p>
-            <iframe src="https://www.youtube.com/embed/x71je7W8_Vs"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allowfullscreen>
-            </iframe>
+            <p><a href="https://youtu.be/x71je7W8_Vs" target="_blank">La oración, la joya perdida del pueblo de Dios</a> basado en Mateo 7:7-11.</p>
         </div>
         <!-- Reunión del 23/04/2023 -->
         <div class="varones">
-          <p>Reunón del 23/04/2023</p>
-          <iframe src="https://www.youtube.com/embed/2_KrgdWdVcg"
-                  title="YouTube video player"
-                  frameborder="0"
-                  allowfullscreen>
-          </iframe>
-      </div>
+            <p>Reunón del 23/04/2023</p>
+            <p><a href="varones_2023_2.html" target="_blank">Orando con el maestro</a> basado en Mateo 6:9-10.</p>
+        </div>
+        <!-- Reunión del 28/05/2023 -->
+        <div class="varones">
+            <p>Reunón del 28/05/2023</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/wiJ-WjQonvM"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <!-- Reunión del 02/07/2023 -->
+        <div class="varones">
+            <p>Reunón del 02/07/2023</p>
+            <p><a href="varones_2023_4.html" target="_blank">Orando con el maestro (Parte III)</a> basado en Mateo 6:13.</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/D-BsjVO-Lp8"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <!-- Reunión del 30/07/2023 -->
+        <div class="varones">
+            <p>Reunón del 30/07/2023</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/KJI5InGoKWs"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <!-- Reunión del 27/08/2023 -->
+        <div class="varones">
+            <p>Reunón del 27/08/2023</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/Q5PYMNUXwmk"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <!-- Reunión del 24/09/2023 -->
+        <div class="varones">
+            <p>Reunón del 24/09/2023</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/LzpJ7_bcFwc"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <!-- Reunión del 29/10/2023 -->
+        <div class="varones">
+            <p>Reunón del 29/10/2023</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/2qGCj2xdXic"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <!-- Reunión del 26/11/2023 -->
+        <div class="varones">
+            <p>Reunón del 26/11/2023</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/AXCExN5Nb8M"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
         <footer class="pie-de-pagina">
             <p>Comunidad Cristiana Laguna Larga</p>
         </footer>
