Reunión de varones 2024

--- a/reunion-varones.html
+++ b/reunion-varones.html
@@ -13,6 +13,7 @@
         </header>
         <!-- Presentación -->
         <div class="varones">
+            <img src="./imagenes/reunion-varones.jpeg" alt="placa de la reunión de varones">
             <p>
                 Durante este año, en el desayuno ☕🍪 que los varones de la congregación y todos aquellos que se quieran sumar tendremos cada último 
                 domingo del mes a las 9:00 am, veremos un video de la serie <a href="https://youtube.com/playlist?list=PLMvvgc4F6CvVhnWALx9CqVvMJx6nUWW80" target="_blank">
@@ -97,6 +98,16 @@
             <p>Reunón del 26/11/2023</p>
             <!-- <iframe class="video-varones"
                     src="https://www.youtube.com/embed/AXCExN5Nb8M"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allowfullscreen>
+            </iframe> -->
+        </div>
+        <div class="varones">
+            <p>Reunón del 25/02/2024</p>
+            <p><a href="varones_2024_5.html" target="_blank">Orando en grande con el apóstol Pablo</a> basado en Efesios 1:15-21.</p>
+            <!-- <iframe class="video-varones"
+                    src="https://www.youtube.com/embed/D-BsjVO-Lp8"
                     title="YouTube video player"
                     frameborder="0"
                     allowfullscreen>
